--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head><title>My name</title></head>
   <body>
-    <h1>Neela Rathnam</h1>
+    <h1>Neela Rathnam Kumara Swamy</h1>
   </body>
 </html>
